Various template integration, update tag insert management, update note management

--- a/app/Admin/Entity/Edit/Edit.html
+++ b/app/Admin/Entity/Edit/Edit.html
@@ -25,7 +25,7 @@
                 </div>
                 <fieldset data-ng-include="'Admin/Entity/Edit/tpl/edit-will.html'"></fieldset>
                 <fieldset data-ng-include="'Admin/Entity/Edit/tpl/edit-resources.html'"></fieldset>
-                <div class="text-center mt-5">
+                <div class="text-right">
                     <button data-ng-click="submit.action()" class="btn btn-primary">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
                 </div>
             </form>
