--- a/app/index.html
+++ b/app/index.html
@@ -190,6 +190,7 @@
     <script type="text/javascript" src="System/Services/TaxonomyService.js"></script>
     <script type="text/javascript" src="System/Services/TrainingContentService.js"></script>
     <script type="text/javascript" src="System/Services/TranscriptService.js"></script>
+    <script type="text/javascript" src="System/Services/TranscriptLogService.js"></script>
     <script type="text/javascript" src="System/Services/UserService.js"></script>
     <script type="text/javascript" src="System/Services/UserPreferenceService.js"></script>
     <script type="text/javascript" src="System/Services/WillService.js"></script>
