--- a/app/Admin/Entity/Edit/tpl/edit-resources.html
+++ b/app/Admin/Entity/Edit/tpl/edit-resources.html
@@ -1,9 +1,11 @@
 <label class="big">À propos des ressources</label>
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-8">
-        <div class="alert alert-info">L'entité compte actuellement <span class="badge badge-info">{{ entity.resources.length }}</span> ressources.</div>
-        <div class="text-right"><a class="btn btn-light" data-ng-click="form.addResource(entity.resources.length)">Ajouter une ressource <i class="fa fa-plus"></i></a></div>
-    </div>
-</div>
+<nav>
+    <ul class="nav nav-pills justify-content-end">
+        <li class="nav-item"><button class="nav-link" ng-click="form.addResource(entity.resources.length)">Ajouter une ressource <i class="fa fa-plus"></i></button></li>
+    </ul>
+</nav>
+
+<div class="alert alert-info">L'entité compte actuellement <span class="badge badge-info">{{ entity.resources.length }}</span> ressources.</div>
+
+
 <div data-ng-repeat="resource in entity.resources" ng-include="'Admin/Entity/Edit/tpl/edit-resources-resource.html'"></div>
