--- a/app/Admin/Entity/Import/Import.html
+++ b/app/Admin/Entity/Import/Import.html
@@ -17,7 +17,7 @@
             <form class="col-12">
                 <fieldset data-ng-include="'Admin/Entity/Import/tpl/import-will.html'"></fieldset>
                 <fieldset data-ng-include="'Admin/Entity/Import/tpl/import-resources.html'"></fieldset>
-                <div class="text-center mt-5">
+                <div class="text-right">
                     <button data-ng-click="form.submit.action()" class="btn btn-primary">Soumettre <i data-ng-if="form.submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
                 </div>
             </form>
