--- a/app/Admin/Entity/Import/tpl/import-resources.html
+++ b/app/Admin/Entity/Import/tpl/import-resources.html
@@ -1,11 +1,13 @@
 <label class="big">À propos des ressources</label>
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-8">
-        <div class="alert alert-info">L'entité compte actuellement <span class="badge badge-info">{{ entity.resources.length }}</span> ressources.</div>
-        <div class="text-right"><a class="btn btn-light" data-ng-click="form.addResource(entity.resources.length)">Ajouter une ressource</a></div>
-    </div>
-</div>
+
+<nav>
+    <ul class="nav nav-pills justify-content-end">
+        <li class="nav-item"><button class="nav-link" ng-click="form.addResource(entity.resources.length)">Ajouter une ressource <i class="fa fa-plus"></i></button></li>
+    </ul>
+</nav>
+
+<div class="alert alert-info">L'entité compte actuellement <span class="badge badge-info">{{ entity.resources.length }}</span> ressources.</div>
+
 <div class="row mb-3" data-ng-repeat="resource in entity.resources">
     <div class="col-sm-12 border-top-1" data-ng-include="'Admin/Entity/Import/tpl/import-resources-resource.html'"></div>
 </div>
