--- a/app/App/Edition/tpl/edition-header.html
+++ b/app/App/Edition/tpl/edition-header.html
@@ -18,7 +18,7 @@
                 </li>
                 <li class="nav-item dropdown" ng-if="role == 'validator'">
                     <a class="nav-link dropdown-toggle" role="button" id="dropdownMenuStatus" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-gear fa-lg" aria-hidden="true"></i> Changer l'état <i class="fa fa-spin fa-circle-o-notch" data-ng-if="admin.status.loading == true"></i>
+                        <i class="fa fa-gear fa-lg" ng-if="admin.status.loading == false" aria-hidden="true"></i><i class="fa fa-spin fa-circle-o-notch" ng-if="admin.status.loading == true"></i> Changer l'état
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuStatus">
                         <li><a class="dropdown-item" ng-click="admin.status.action('todo')" ng-class="(resource.transcript.status == 'todo') ? 'bg-danger' : ''">À faire</a></li>
