--- a/app/App/Entity/tpl/entity-resources.html
+++ b/app/App/Entity/tpl/entity-resources.html
@@ -7,11 +7,9 @@
                 <li class="col-lg-2 col-md-3 col-sm-4 col-12 pb-3" data-ng-repeat="resource in entity.resources">
                     <div class="nbPage">{{ resource.type | resourceTypeName | ucFirstStrict }} {{ resource.orderInWill }}</div>
                     <span title="État de la transcription" class="badge badge-status d-table" data-ng-class="getStatusClassLabel(resource.transcript.status)">{{ getStatusLabel(resource.transcript.status) }}</span>
-                    <a ui-sref="transcript.app.edition({ idEntity: entity.id, idResource: resource.id })">   <!-- Ajouter la class"disabled" à l'élément <a> si page en cours d'édition -->
-                        <!-- Ajouter le <span> si page en cours d'édition
-                            <span class="badge d-table" title="En cours d'édition">en cours d'édition</span>
-                        -->
-                        <img class="img-fluid" src="{{ api_web  }}/images/data/testament_{{ entity.willNumber | willNumberFormat }}/JPEG/FRAN_Poilus_t-{{ entity.willNumber| willNumberFormat }}_{{ resource.images[0] }}_L.jpg"/>
+                    <a ui-sref="transcript.app.edition({ idEntity: entity.id, idResource: resource.id })">
+                        <span ng-if="resource.transcript._embedded.isOpened == false" class="badge d-table" title="En cours d'édition">en cours d'édition</span>
+                        <img class="img-fluid" src="{{ api_web  }}/images/data/testament_{{ entity.willNumber | willNumberFormat }}/JPEG/FRAN_Poilus_t-{{ entity.willNumber| willNumberFormat }}_{{ resource.images[0] | willNumberFormat:2 }}_L.jpg"/>
                     </a>
                 </li>
             </ul>
