Updating many functions in transcription interface

--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,7 @@
     <script type="text/javascript" src="System/Services/EntityService.js"></script>
     <script type="text/javascript" src="System/Services/ImageService.js"></script>
     <script type="text/javascript" src="System/Services/LogService.js"></script>
+    <script type="text/javascript" src="System/Services/NoteService.js"></script>
     <script type="text/javascript" src="System/Services/ResourceService.js"></script>
     <script type="text/javascript" src="System/Services/SearchService.js"></script>
     <script type="text/javascript" src="System/Services/TaxonomyService.js"></script>
