--- a/app/App/Entity/tpl/entity-resources.html
+++ b/app/App/Entity/tpl/entity-resources.html
@@ -7,7 +7,7 @@
                 <li class="col-lg-2 col-md-3 col-sm-4 col-12 pb-3" data-ng-repeat="resource in entity.resources">
                     <div class="nbPage">{{ resource.type | resourceTypeName | ucFirstStrict }} {{ resource.orderInWill }}</div>
                     <span title="État de la transcription" class="badge badge-status d-table" data-ng-class="getStatusClassLabel(resource.transcript.status)">{{ getStatusLabel(resource.transcript.status) }}</span>
-                    <a ui-sref="transcript.app.edition({ idEntity: entity.id, idResource: resource.id })">
+                    <a ui-sref="transcript.app.edition({ idEntity: entity.id, idResource: resource.id })" ng-class="{'locked': resource.transcript._embedded.isOpened == false}">
                         <span ng-if="resource.transcript._embedded.isOpened == false" class="badge d-table" title="En cours d'édition">en cours d'édition</span>
                         <img class="img-fluid" src="{{ api_web  }}/images/data/testament_{{ entity.willNumber | willNumberFormat }}/JPEG/FRAN_Poilus_t-{{ entity.willNumber| willNumberFormat }}_{{ resource.images[0] | willNumberFormat:2 }}_L.jpg"/>
                     </a>
