--- a/app/App/Edition/tpl/edition-header.html
+++ b/app/App/Edition/tpl/edition-header.html
@@ -7,6 +7,7 @@
         <nav class="mt-4">
             <ul class="nav nav-pills">
                 <li class="nav-item" ng-include="'App/Edition/tpl/edition-header-editButton.html'"></li>
+                <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search"><i class="fa fa-search fa-lg" aria-hidden="true"></i> Autres testaments</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuNavResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuNavResources">
