--- a/app/System/Footer/Footer.html
+++ b/app/System/Footer/Footer.html
@@ -3,7 +3,7 @@
         <div class="col-lg-2 col-sm-6 p-0">
             <nav class="nav flex-column bg-danger">
                 <a class="nav-link" ng-if="preferences.discoverHomeContent != null" ui-sref="app.content({id: preferences.discoverHomeContent})">Découvrir</a>
-                <a class="nav-link" ng-if="preferences.helpHomeContent != null" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">Guides</a>
+                <a class="nav-link" ng-if="preferences.helpHomeContent != null" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">Guides d'utilisation</a>
                 <a class="nav-link" ui-sref="app.blog">Actualités</a>
                 <a class="nav-link" ui-sref="app.search">Transcrire</a>
                 <a class="nav-link" ui-sref="app.taxonomy.home">Documenter</a>
