--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -8,7 +8,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav nav nav-justified">
                     <li class="nav-item" ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
-                    <li class="nav-item" ng-if="preferences.helpHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">aide</a></li>
+                    <li class="nav-item" ng-if="preferences.helpHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">guides</a></li>
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.blog">actualités</a></li>
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search">transcrire</a></li>
                     <li class="nav-item dropdown">
