--- a/app/Admin/Entity/Edit/tpl/edit-info-will.html
+++ b/app/Admin/Entity/Edit/tpl/edit-info-will.html
@@ -1,4 +1,4 @@
-<label class="big">Informations</label>
+<h2 class="big card-header bg-dark text-white">Informations</h2>
 
 <div class="form-group row">
     <label class="col-md-4 col-form-label text-md-right">Identifiant</label>
