--- a/app/Admin/Training/Edit/Edit.html
+++ b/app/Admin/Training/Edit/Edit.html
@@ -51,7 +51,7 @@
                         </select>
                     </div>
                     <div class="col-md-10 offset-md-2">
-                        <small class="form-text text-muted">Le nom et la qualité de cette personne seront ajoutés en haut de la page d'entrainement, en tant que personne référente.</small>
+                        <small class="form-text text-muted">Le nom et la qualité de ces personnes seront ajoutés en haut de la page d'entrainement, en tant que personne référente.</small>
                     </div>
                 </div>
                 <div class="form-group row">
