--- a/app/App/Taxonomy/Edit/Edit.html
+++ b/app/App/Taxonomy/Edit/Edit.html
@@ -48,8 +48,12 @@
                     <div ng-if="entity.dataType == 'testators'" ng-include="'App/Taxonomy/tpl/form-testator.html'"></div>
                     <div ng-if="entity.dataType == 'places'" ng-include="'App/Taxonomy/tpl/form-place.html'"></div>
                     <div ng-if="entity.dataType == 'military-units'" ng-include="'App/Taxonomy/tpl/form-military-unit.html'"></div>
+                    <div ng-include="'App/Taxonomy/tpl/list-bibliography.html'"></div>
+                    <div ng-include="'App/Taxonomy/tpl/form-submit.html'"></div>
+                    <div class="clearfix"></div>
                 </div>
             </form>
+            <div ng-include="'App/Taxonomy/tpl/form-bibliography.html'"></div>
             <div class="card text-white bg-danger mb-3 mt-4" ng-if="entity.id != null && (user.roles | contains:'ROLE_ADMIN')">
                 <h2 class="card-header bg-dark text-white">Zone dangereuse</h2>
                 <div class="card-body">
