--- a/app/App/Taxonomy/tpl/form-place.html
+++ b/app/App/Taxonomy/tpl/form-place.html
@@ -13,12 +13,12 @@
     <div class="form-group col-md-6">
         <label for="app-entity-edit-frenchDepartement" class="form-control-label">Département</label>
         <input id="app-entity-edit-frenchDepartement" class="form-control form-control-sm" ng-model="entity.frenchDepartement" />
-        <small class="text-muted">Pour les localités françaises seulement</small>
+        <small class="form-text text-muted">Pour les localités françaises seulement</small>
     </div>
     <div class="form-group col-md-6">
         <label for="app-entity-edit-frenchRegion" class="form-control-label">Région</label>
         <input id="app-entity-edit-frenchRegion" class="form-control form-control-sm" ng-model="entity.frenchRegion" />
-        <small class="text-muted">Pour les localités françaises seulement</small>
+        <small class="form-text text-muted">Pour les localités françaises seulement</small>
     </div>
 </div>
 
@@ -40,7 +40,7 @@
     <div class="form-group col-md-12">
         <label for="app-entity-edit-geonameId" class="form-control-label">Identifiant Geonames</label>
         <input id="app-entity-edit-geonameId" class="form-control form-control-sm" ng-model="entity.geonamesId" />
-        <small class="text-muted">Inscrire uniquement l'identifiant et non toute l'URL (ex <code>2988784</code>)</small>
+        <small class="form-text text-muted">Inscrire uniquement l'identifiant et non toute l'URL (ex <code>2988784</code>)</small>
     </div>
 </div>
 
@@ -48,9 +48,6 @@
     <div class="form-group col-md-12">
         <label for="app-entity-edit-geographicalCoordinates" class="form-control-label">Coordonnées géographiques</label>
         <input id="app-entity-edit-geographicalCoordinates" class="form-control form-control-sm" ng-model="entity.geographicalCoordinates" />
-        <small class="text-muted">À formater de la manière suivante latitude+longitude (ex <code>49.42535+3.69726</code>)</small>
+        <small class="form-text text-muted">À formater de la manière suivante latitude+longitude (ex <code>49.42535+3.69726</code>)</small>
     </div>
 </div>
-
-<div ng-include="'App/Taxonomy/tpl/form-submit.html'"></div>
-<div class="clearfix"></div>
