--- a/app/Admin/Home/Home.html
+++ b/app/Admin/Home/Home.html
@@ -61,5 +61,11 @@
                 <li class="list-group-item"><a ui-sref="transcript.admin.comments">Liste des derniers commentaires</a></li>
             </ul>
         </div>
+        <div class="col-sm-4 mb-5">
+            <h2>Institutions de conservation</h2>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a ui-sref="transcript.admin.hosting-organization.list">Liste des institutions de conservation</a></li>
+            </ul>
+        </div>
     </div>
 </main>
