--- a/app/App/Search/tpl/Search-form.html
+++ b/app/App/Search/tpl/Search-form.html
@@ -54,8 +54,8 @@
             <angucomplete id="app-search-form-institution"
                           placeholder=""
                           pause="100"
-                          selectedobject="search.form.will.hostingOrganization"
-                          localdata="search.values.will.hostingOrganization"
+                          selectedobject="search.form.will.hostingOrganization.name"
+                          localdata="search.values.will.hostingOrganization.name"
                           searchfields="name"
                           titlefield="name"
                           minlength="1"
