--- a/app/Admin/Entity/List/List.html
+++ b/app/Admin/Entity/List/List.html
@@ -16,7 +16,7 @@
         <tr>
             <th>#</th>
             <th><a ng-click="entitiesSorting = 'willNumber'" title="Trier par numéro d'identification du testament">IdNum <i class="fa fa-caret-down"></i></a></th>
-            <th><a ng-click="entitiesSorting = 'will.hostingOrganization'" title="Trier par institution de conservation">Institution <i class="fa fa-caret-down"></i></a></th>
+            <th><a ng-click="entitiesSorting = 'will.hostingOrganization.name'" title="Trier par institution de conservation">Institution <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.title'" title="Trier par titre du testament">Titre <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.willWritingYear'" title="Trier par année de rédaction du testament">Rédaction <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.testator.surname'" title="Trier par nom de famille du testateur">Testateur <i class="fa fa-caret-down"></i></a></th>
@@ -25,7 +25,7 @@
         <tr data-ng-repeat="entity in entities|orderBy:entitiesSorting">
             <td>{{ $index+1 }}</td>
             <td>{{ entity.willNumber }}</td>
-            <td>{{ entity.will.hostingOrganization }}</td>
+            <td>{{ entity.will.hostingOrganization.name }}</td>
             <td><a ui-sref="transcript.app.entity({id: entity.id})">{{ entity.will.title }}</a></td>
             <td>{{ entity.will.willWritingDate }}</td>
             <td>{{ entity.will.testator.name }}</td>
