--- a/app/App/Search/tpl/Search-results-content-list.html
+++ b/app/App/Search/tpl/Search-results-content-list.html
@@ -7,7 +7,7 @@
             <div class="desc">
                 {{ entity.will.testator.deathMention }} le {{ entity.will.testator.dateOfDeath }} <span class="text-danger">|</span> {{ entity.will.testator.placeOfDeath.names[0].name }}<span ng-if="entity.will.testator.placeOfDeath.countries != null">, {{ entity.will.testator.placeOfDeath.countries[0].name }}</span><br />
                 Testament rédigé le {{ entity.will.willWritingDate }} <span class="text-danger">|</span> {{ entity.will.willWritingPlace.names[0].name }}<span ng-if="entity.will.willWritingPlace.countries != null">, {{ entity.will.willWritingPlace.countries[0].name }}</span><br />
-                <div class="cote"> Cote aux {{ entity.will.hostingOrganization | organisationName }} {{ entity.will.callNumber }}, minute du {{ entity.will.minuteDate }}</div>
+                <div class="cote"> Cote aux {{ entity.will.hostingOrganization.name }} {{ entity.will.callNumber }}, minute du {{ entity.will.minuteDate }}</div>
             </div>
         </div>
         <div class="col-md-12 pr-0 text-right align-self-end"><span class="badge badge-secondary" title="Nombre de ressources à transcrire">{{ entity.resources.length }} page<span ng-if="entity.resources.length > 1">s</span></span></div>
