--- a/app/Admin/Entity/Import/tpl/import-will.html
+++ b/app/Admin/Entity/Import/tpl/import-will.html
@@ -53,7 +53,7 @@
     <div class="col-md-8">
         <select id="admin-entity-edit-will-hostingOrganization" name="admin-entity-edit-will-hostingOrganization" class="custom-select" data-ng-model="entity.will.hostingOrganization" required="required">
             <option value="" disabled>Sélectionnez ...</option>
-            <option ng-repeat="organization in organizations" value="{{ organization.code }}">{{ organization.name }}</option>
+            <option ng-repeat="organization in organizations" value="{{ organization.id }}">{{ organization.name }}</option>
         </select>
     </div>
 </div>
