--- a/app/Admin/Home/Home.html
+++ b/app/Admin/Home/Home.html
@@ -21,6 +21,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a ui-sref="transcript.admin.entity.list">Liste des entités</a></li>
                 <li class="list-group-item"><a ui-sref="transcript.admin.entity.import">Importer une entité</a></li>
+                <li class="list-group-item"><a ui-sref="transcript.admin.will-type.list">Types de testaments</a></li>
             </ul>
         </div>
         <div class="col-sm-4 mb-5">
