--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,9 @@
     <script type="text/javascript" src="Admin/User/User.js"></script>
     <script type="text/javascript" src="Admin/User/List/List.js"></script>
     <script type="text/javascript" src="Admin/User/View/View.js"></script>
+    <script type="text/javascript" src="Admin/WillType/WillType.js"></script>
+    <script type="text/javascript" src="Admin/WillType/List/List.js"></script>
+    <script type="text/javascript" src="Admin/WillType/Edit/Edit.js"></script>
     <script type="text/javascript" src="App/App.js"></script>
     <script type="text/javascript" src="App/Blog/Blog.js"></script>
     <script type="text/javascript" src="App/Contact/Contact.js"></script>
@@ -132,6 +135,9 @@
     <script type="text/javascript" src="App/Edition/Edition.js"></script>
     <script type="text/javascript" src="App/Entity/Entity.js"></script>
     <script type="text/javascript" src="App/Home/Home.js"></script>
+    <script type="text/javascript" src="App/HostingOrganization/HostingOrganization.js"></script>
+    <script type="text/javascript" src="App/HostingOrganization/List/List.js"></script>
+    <script type="text/javascript" src="App/HostingOrganization/View/View.js"></script>
     <script type="text/javascript" src="App/Search/Search.js"></script>
     <script type="text/javascript" src="App/Security/Security.js"></script>
     <script type="text/javascript" src="App/Security/Check/Check.js"></script>
@@ -204,5 +210,6 @@
     <script type="text/javascript" src="System/Services/UserService.js"></script>
     <script type="text/javascript" src="System/Services/UserPreferenceService.js"></script>
     <script type="text/javascript" src="System/Services/WillService.js"></script>
+    <script type="text/javascript" src="System/Services/WillTypeService.js"></script>
 </body>
 </html>
