--- a/app/App/Home/tpl/home-search-form.html
+++ b/app/App/Home/tpl/home-search-form.html
@@ -16,8 +16,8 @@
         <angucomplete id="app-home-form-testator-deathPlace"
                       placeholder=""
                       pause="100"
-                      selectedobject="search.form.will.testator.placeOfDeath.name"
-                      localdata="search.values.will.testator.placeOfDeath.name"
+                      selectedobject="search.form.will.testator.placeOfDeathNormalized.name"
+                      localdata="search.values.will.testator.placeOfDeathNormalized.name"
                       searchfields="name"
                       titlefield="name"
                       minlength="1"
@@ -40,8 +40,8 @@
         <angucomplete id="app-home-form-testator-birthPlace"
                       placeholder=""
                       pause="100"
-                      selectedobject="search.form.will.testator.placeOfBirth.name"
-                      localdata="search.values.will.testator.placeOfBirth.name"
+                      selectedobject="search.form.will.testator.placeOfBirthNormalized.name"
+                      localdata="search.values.will.testator.placeOfBirthNormalized.name"
                       searchfields="name"
                       titlefield="name"
                       minlength="1"
