--- a/app/App/Search/tpl/Search-form.html
+++ b/app/App/Search/tpl/Search-form.html
@@ -18,8 +18,8 @@
             <angucomplete id="app-search-form-testator-deathPlace"
                           placeholder=""
                           pause="100"
-                          selectedobject="search.form.will.testator.placeOfDeath.name"
-                          localdata="search.values.will.testator.placeOfDeath.name"
+                          selectedobject="search.form.will.testator.placeOfDeathNormalized.name"
+                          localdata="search.values.will.testator.placeOfDeathNormalized.name"
                           searchfields="name"
                           titlefield="name"
                           minlength="1"
@@ -42,8 +42,8 @@
             <angucomplete id="app-search-form-testator-birthPlace"
                           placeholder=""
                           pause="100"
-                          selectedobject="search.form.will.testator.placeOfBirth.name"
-                          localdata="search.values.will.testator.placeOfBirth.name"
+                          selectedobject="search.form.will.testator.placeOfBirthNormalized.name"
+                          localdata="search.values.will.testator.placeOfBirthNormalized.name"
                           searchfields="name"
                           titlefield="name"
                           minlength="1"
