Update algo transcript

--- a/app/index.html
+++ b/app/index.html
@@ -195,6 +195,7 @@
     <script type="text/javascript" src="System/Services/CommentLogService.js"></script>
     <script type="text/javascript" src="System/Services/ContactService.js"></script>
     <script type="text/javascript" src="System/Services/ContentService.js"></script>
+    <script type="text/javascript" src="System/Services/DataInterfaceService.js"></script>
     <script type="text/javascript" src="System/Services/EntityService.js"></script>
     <script type="text/javascript" src="System/Services/GeonamesService.js"></script>
     <script type="text/javascript" src="System/Services/HostingOrganizationService.js"></script>
