--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,7 @@
     <script type="text/javascript" src="System/Filters/BooleanRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ClassicDateFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ContentTypeNameFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/EncodeXMLFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ImageRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ResourceTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
