update transcript service

--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,7 @@
     <script type="text/javascript" src="System/Error/404/404.js"></script>
     <script type="text/javascript" src="System/Directives/CompileDirective.js"></script>
     <script type="text/javascript" src="System/Directives/MwConfirmClickDirective.js"></script>
+    <script type="text/javascript" src="System/Directives/TooltipDirective.js"></script>
     <script type="text/javascript" src="System/Filters/ArrayRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/BooleanRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ClassicDateFilter.js"></script>
